Append '.html' extension when user doesn't, b=77474, r=law, sr=kin